test/tests/stages/16_characters_and_strings/invalid_types/string_initializer_too_long.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  char
  identifier(too_long)
  [
  const int(3)
  ]
  =
  string literal("abcd")
  ;
  return
  const int(0)
  ;
  }
